Change destination URL in index.html
Updated the destination URL for redirection.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script>
         // यहाँ पर आप वो वेबसाइट का URL रखेंगे जिसे आप बदलना चाहते हैं
         // शुरुआत में यह आपकी पुरानी वेबसाइट होगी
-        let destinationUrl = "https://infoaios.ai/"; 
+        let destinationUrl = "https://arclight.solutions/industries"; 
 
         // जब यह पेज लोड होगा, तो यह उपयोगकर्ता को destinationUrl पर भेज देगा
         window.onload = function() {
